# PhotoCaber

ES/: MOTORCONTROL.DRC  MOTORCONTROL.DSN  MOTORCONTROL_0.DBK  MotorControl.opj  V02.DSN  v02.opj
ES/BOM/: MotorControl.BOM
ES/MotorControlNet/: last_import_time.txt
ES/Net/: last_import_time.txt
ES/PCB/: MotorControl.brd  eco.txt  (+19 more)
LED_Matrix/software/esp32/untitled/: CMakeLists.txt  FUJIFILM.cpp  FUJIFILM.h  GFX100.h  GFX100S.h  GFX50R.h  GFX50S.h  GFX50SII.h  X-Pro3.h  X-S10.h  X-T3.h  X-T4.h  XAPI.H  XAPIOpt.H  main.cpp
Matlab/: cable.mlx  opam.mlx
Motion/: 51100.SLDPRT  51103zc.SLDPRT  51103zc_默认_sldprt.STEP  51106.SLDPRT  Design.nb  adams1.adm  adams1.res  adams2.res  adams3.adm  adams3.res  adams4.res  adams5.adm  adams5.res  adams6.adm  adams6.res  adams7.adm  adams7.res  bar1p_默认_sldprt.STEP  bar23_默认_sldprt.STEP  bar2p_默认_sldprt.STEP  bar_默认_sldprt.STEP  base_默认_sldprt.STEP  basep_默认_sldprt.STEP  camera_bar_默认_sldprt.STEP  camera_默认_sldprt.STEP  ccs12.txt  ccs3.txt  cro1.SLDPRT  cro1_默认_sldprt.STEP  cro2.SLDPRT  cro2_默认_sldprt.STEP  cro3.SLDPRT  cro3_默认_sldprt.STEP  cts12.txt  cts3.txt  e1.csv  e2.csv  e3.csv  enc.txt  enc.xlsx  (+107 more)
Motor/: controlBoard.SLDPRT
robot1/: 423007ZhouCheng.SLDPRT  655007ZhouCheng.SLDPRT  GB_MC_SCREW_TYPE11 M6X20-20-N.SLDPRT  M4X16-16.SLDPRT  bar1.SLDASM  bar11.SLDPRT  bar12.SLDPRT  bar13.SLDPRT  bar1p.SLDPRT  bar2.SLDASM  bar21.SLDPRT  bar22.SLDPRT  bar23.SLDPRT  bar2p.SLDPRT  bar3.SLDASM  bar31.SLDPRT  bar3p.SLDPRT  base.SLDASM  base.SLDPRT  base1.SLDPRT  basep.SLDPRT  motor2.SLDPRT  motor3.SLDPRT  sim.SLDASM  total.SLDASM
(+177 files in other folders)
